# Eigen-PCA

./: .gitignore  .gitmodules  README.md
pca/: eigen-pca.hpp
test/: CMakeLists.txt  README.md  create_reference_data.py  requirements.txt  test.cpp  utils.hpp  vcpkg.json
test/cmake/: DownloadDependencies.cmake
